--- a/po/bn_IN.po
+++ b/po/bn_IN.po
@@ -3,56 +3,54 @@
 # This file is distributed under the same license as the PACKAGE package.
 # 
 # Translators:
-# Leonid Kanter <leon@asplinux.ru>, 2010.
-# Yuri Kozlov <yuray@komyakino.ru>, 2010.
-# Юрий Козлов <yuray@komyakino.ru>, 2010.
+# Umesh Agarwal <umesh.agarwal1@gmail.com>, 2012.
 msgid ""
 msgstr ""
 "Project-Id-Version: MATE Desktop Environment\n"
 "Report-Msgid-Bugs-To: https://github.com/mate-desktop/\n"
 "POT-Creation-Date: 2012-06-28 16:07+0200\n"
-"PO-Revision-Date: 2013-03-11 19:56+0000\n"
-"Last-Translator: Alexei Sorokin <sor.alexei@hotbox.ru>\n"
-"Language-Team: Russian (http://www.transifex.com/projects/p/MATE/language/ru/)\n"
+"PO-Revision-Date: 2012-09-29 18:21+0000\n"
+"Last-Translator: Umesh Agarwal <umesh.agarwal1@gmail.com>\n"
+"Language-Team: Bengali (India) (http://www.transifex.com/projects/p/MATE/language/bn_IN/)\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
-"Language: ru\n"
-"Plural-Forms: nplurals=3; plural=(n%10==1 && n%100!=11 ? 0 : n%10>=2 && n%10<=4 && (n%100<10 || n%100>=20) ? 1 : 2);\n"
+"Language: bn_IN\n"
+"Plural-Forms: nplurals=2; plural=(n != 1);\n"
 
 #: ../library/mate-keyring-utils.c:100
 msgid "Access Denied"
-msgstr "В доступе отказано"
+msgstr "पहुँच अस्वीकृत"
 
 #: ../library/mate-keyring-utils.c:102
 msgid "The mate-keyring-daemon application is not running."
-msgstr "Приложение mate-keyring-daemon не запущено."
+msgstr "मेट-कीरिंग-डेमॉन आवेदन नहीं चल रहा है."
 
 #: ../library/mate-keyring-utils.c:104
 msgid "Error communicating with mate-keyring-daemon"
-msgstr "Ошибка подключения к mate-keyring-daemon"
+msgstr "मेट-कीरिंग-डेमॉन के साथ संवाद स्थापित करने में त्रुटि"
 
 #: ../library/mate-keyring-utils.c:106
 msgid "A keyring with that name already exists"
-msgstr "Связка ключей с таким именем уже существует"
+msgstr "उस नाम के साथ कीरिंग पहले से ही मौजूद है"
 
 #: ../library/mate-keyring-utils.c:108
 msgid "Programmer error: The application sent invalid data."
-msgstr "Ошибка разработчика: приложение послало некорректные данные."
+msgstr "प्रोग्रामर त्रुटि: आवेदन ने अमान्य डेटा भेजा."
 
 #: ../library/mate-keyring-utils.c:110
 msgid "No matching results"
-msgstr "Нет совпадений"
+msgstr "कोई मिलान परिणाम नहीं"
 
 #: ../library/mate-keyring-utils.c:112
 msgid "A keyring with that name does not exist."
-msgstr "Связка ключей с таким именем не существует."
+msgstr "उस नाम के साथ कीरिंग मौजूद नहीं है."
 
 #: ../library/mate-keyring-utils.c:119
 msgid "The keyring has already been unlocked."
-msgstr "Связка ключей уже разблокирована."
+msgstr "कीरिंग पहले से खुला है."
 
 #. TRANSLATORS: This is the name of an automatically created default keyring.
 #: ../library/mate-keyring.c:2790
 msgid "Default"
-msgstr "Основная"
+msgstr "डिफ़ॉल्ट"
