--- a/po/en_AU.po
+++ b/po/en_AU.po
@@ -3,56 +3,55 @@
 # This file is distributed under the same license as the PACKAGE package.
 # 
 # Translators:
-# Leonid Kanter <leon@asplinux.ru>, 2010.
-# Yuri Kozlov <yuray@komyakino.ru>, 2010.
-# Юрий Козлов <yuray@komyakino.ru>, 2010.
+#   <keltoiboy@gmail.com>, 2012.
+# Michael Findlay <keltoiboy@gmail.com>, 2012.
 msgid ""
 msgstr ""
 "Project-Id-Version: MATE Desktop Environment\n"
 "Report-Msgid-Bugs-To: https://github.com/mate-desktop/\n"
 "POT-Creation-Date: 2012-06-28 16:07+0200\n"
-"PO-Revision-Date: 2013-03-11 19:56+0000\n"
-"Last-Translator: Alexei Sorokin <sor.alexei@hotbox.ru>\n"
-"Language-Team: Russian (http://www.transifex.com/projects/p/MATE/language/ru/)\n"
+"PO-Revision-Date: 2012-09-26 07:58+0000\n"
+"Last-Translator: k3lt01 <keltoiboy@gmail.com>\n"
+"Language-Team: English (Australia) (http://www.transifex.com/projects/p/MATE/language/en_AU/)\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
-"Language: ru\n"
-"Plural-Forms: nplurals=3; plural=(n%10==1 && n%100!=11 ? 0 : n%10>=2 && n%10<=4 && (n%100<10 || n%100>=20) ? 1 : 2);\n"
+"Language: en_AU\n"
+"Plural-Forms: nplurals=2; plural=(n != 1);\n"
 
 #: ../library/mate-keyring-utils.c:100
 msgid "Access Denied"
-msgstr "В доступе отказано"
+msgstr "Access Denied"
 
 #: ../library/mate-keyring-utils.c:102
 msgid "The mate-keyring-daemon application is not running."
-msgstr "Приложение mate-keyring-daemon не запущено."
+msgstr "The mate-keyring-daemon application is not running."
 
 #: ../library/mate-keyring-utils.c:104
 msgid "Error communicating with mate-keyring-daemon"
-msgstr "Ошибка подключения к mate-keyring-daemon"
+msgstr "Error communicating with mate-keyring-daemon"
 
 #: ../library/mate-keyring-utils.c:106
 msgid "A keyring with that name already exists"
-msgstr "Связка ключей с таким именем уже существует"
+msgstr "A keyring with that name already exists"
 
 #: ../library/mate-keyring-utils.c:108
 msgid "Programmer error: The application sent invalid data."
-msgstr "Ошибка разработчика: приложение послало некорректные данные."
+msgstr "Programmer error: The application sent invalid data."
 
 #: ../library/mate-keyring-utils.c:110
 msgid "No matching results"
-msgstr "Нет совпадений"
+msgstr "No matching results"
 
 #: ../library/mate-keyring-utils.c:112
 msgid "A keyring with that name does not exist."
-msgstr "Связка ключей с таким именем не существует."
+msgstr "A keyring with that name does not exist."
 
 #: ../library/mate-keyring-utils.c:119
 msgid "The keyring has already been unlocked."
-msgstr "Связка ключей уже разблокирована."
+msgstr "The keyring has already been unlocked."
 
 #. TRANSLATORS: This is the name of an automatically created default keyring.
 #: ../library/mate-keyring.c:2790
 msgid "Default"
-msgstr "Основная"
+msgstr "Default"
