--- a/po/hr.po
+++ b/po/hr.po
@@ -3,56 +3,54 @@
 # This file is distributed under the same license as the PACKAGE package.
 # 
 # Translators:
-# Leonid Kanter <leon@asplinux.ru>, 2010.
-# Yuri Kozlov <yuray@komyakino.ru>, 2010.
-# Юрий Козлов <yuray@komyakino.ru>, 2010.
+#  <croatianfan@gmail.com>, 2013.
 msgid ""
 msgstr ""
 "Project-Id-Version: MATE Desktop Environment\n"
 "Report-Msgid-Bugs-To: https://github.com/mate-desktop/\n"
 "POT-Creation-Date: 2012-06-28 16:07+0200\n"
-"PO-Revision-Date: 2013-03-11 19:56+0000\n"
-"Last-Translator: Alexei Sorokin <sor.alexei@hotbox.ru>\n"
-"Language-Team: Russian (http://www.transifex.com/projects/p/MATE/language/ru/)\n"
+"PO-Revision-Date: 2013-03-02 04:40+0000\n"
+"Last-Translator: CroatianFan <croatianfan@gmail.com>\n"
+"Language-Team: Croatian (http://www.transifex.com/projects/p/MATE/language/hr/)\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
-"Language: ru\n"
-"Plural-Forms: nplurals=3; plural=(n%10==1 && n%100!=11 ? 0 : n%10>=2 && n%10<=4 && (n%100<10 || n%100>=20) ? 1 : 2);\n"
+"Language: hr\n"
+"Plural-Forms: nplurals=3; plural=n%10==1 && n%100!=11 ? 0 : n%10>=2 && n%10<=4 && (n%100<10 || n%100>=20) ? 1 : 2;\n"
 
 #: ../library/mate-keyring-utils.c:100
 msgid "Access Denied"
-msgstr "В доступе отказано"
+msgstr "Pristup odbijen"
 
 #: ../library/mate-keyring-utils.c:102
 msgid "The mate-keyring-daemon application is not running."
-msgstr "Приложение mate-keyring-daemon не запущено."
+msgstr "Program mate-keyring-daemon nije pokrenut."
 
 #: ../library/mate-keyring-utils.c:104
 msgid "Error communicating with mate-keyring-daemon"
-msgstr "Ошибка подключения к mate-keyring-daemon"
+msgstr "Pogrješka u općenju s programom mate-keyring-daemon"
 
 #: ../library/mate-keyring-utils.c:106
 msgid "A keyring with that name already exists"
-msgstr "Связка ключей с таким именем уже существует"
+msgstr "Ključevnik s tim nazivom već postoji"
 
 #: ../library/mate-keyring-utils.c:108
 msgid "Programmer error: The application sent invalid data."
-msgstr "Ошибка разработчика: приложение послало некорректные данные."
+msgstr "Programerska pogrješka: program je poslao neispravne podatke."
 
 #: ../library/mate-keyring-utils.c:110
 msgid "No matching results"
-msgstr "Нет совпадений"
+msgstr "Nema odgovarajućih ishoda"
 
 #: ../library/mate-keyring-utils.c:112
 msgid "A keyring with that name does not exist."
-msgstr "Связка ключей с таким именем не существует."
+msgstr "Ključevnik s tim nazivom ne postoji."
 
 #: ../library/mate-keyring-utils.c:119
 msgid "The keyring has already been unlocked."
-msgstr "Связка ключей уже разблокирована."
+msgstr "Ključevnik je već otključan."
 
 #. TRANSLATORS: This is the name of an automatically created default keyring.
 #: ../library/mate-keyring.c:2790
 msgid "Default"
-msgstr "Основная"
+msgstr "Zadano"
